; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_index.c_git_index_update_all.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_index.c_git_index_update_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INDEX_ACTION_UPDATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_index_update_all(i32* %0, i32* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @INDEX_ACTION_UPDATE, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @index_apply_to_wd_diff(i32* %10, i32 %11, i32* %12, i32 0, i32 %13, i8* %14)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %4
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @git_error_set_after_callback(i32 %19)
  br label %21

21:                                               ; preds = %18, %4
  %22 = load i32, i32* %9, align 4
  ret i32 %22
}

declare dso_local i32 @index_apply_to_wd_diff(i32*, i32, i32*, i32, i32, i8*) #1

declare dso_local i32 @git_error_set_after_callback(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
